<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Sistema de Monitoreo de buses</string>
    <string name="app_name">I Trade</string>
    <string name="menu">Home</string>
    <string name="ventanamapa">MetroSoft</string>
    <string name="tipo">Tipo de Incidente:</string>
    <string name="boton_Msj">Registrar Pedido</string>
    <string name="descripcion_Msj">Decripción del Incidente:</string>
    <string name="ingresar">Ingresar</string>
    <string name="login">Inicio de Sesion</string>
    <string name="usuario">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="mapview">Mapview:</string>
    <string name="tipo_prompt">Elige un tipo de incidente</string>
    <string name="opcion1">Registrar Pedido</string>
    <string name="opcion2">Ver Mapa</string>
    <string name="opcion3">Salir</string>
    <string name="opcion4">Buscar Pedidos</string>
    <string name="opcion5">Ver Clientes</string>
    <string name="msjRecibir">Recepción de Mensaje</string>
    <string name="msjEnviar">Enviar Mensaje</string>
    <string name="incidencia">Pedidos</string>
    <string-array name="tipo_arrays">
        <item>Incendio</item>
        <item>Choque</item>
        <item>Tráfico</item>
    </string-array>
    <string name="listavacia">Lista Vacia</string>
    <string name="vermapa">Ver Mapa</string>
    <string name="crearpedido">Crear Pedido</string>
    <string name="verpedidos">Ver Pedidos</string>
    <string name="nombreusuario">Nombre de Usuario</string>
    <string name="aceptar">Aceptar</string>
</resources>
