<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/verde" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_x="16dp"
        android:layout_y="52dp"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/opcion1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_x="134dp"
        android:layout_y="12dp"
        android:shadowColor="#8a6603"
        android:shadowDx="8"
        android:shadowDy="7"
        android:shadowRadius="1.8"
        android:text="@string/menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="172dp"
        android:layout_y="73dp"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/opcion4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_x="50dp"
        android:layout_y="82dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/mail" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_x="196dp"
        android:layout_y="106dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/lupa6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_x="35dp"
        android:layout_y="146dp"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/opcion2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:layout_x="51dp"
        android:layout_y="180dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/mapa" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_x="170dp"
        android:layout_y="169dp"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/opcion5"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="39dp"
        android:layout_x="205dp"
        android:layout_y="198dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:src="@drawable/exclamacion1"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="39dp"
        android:layout_x="124dp"
        android:layout_y="292dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/salir3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_x="129dp"
        android:layout_y="254dp"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/opcion3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</AbsoluteLayout>